--- a/apps/centos-base/Dockerfile
+++ b/apps/centos-base/Dockerfile
@@ -25,7 +25,9 @@ RUN wget http://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O
 #mysql
 RUN echo '================install mysql================'
 RUN yum install -y mysql-server
-RUN service mysqld restart > mysql.log 
+RUN service mysqld start > mysql.log 
+RUN service mysqld restart > mysql2.log
+RUN netstat -an | grep 3306 > netstat.log
 RUN sleep 30s
 RUN cat mysql.log | grep new-password | sed 's/new-password/Sample09X#/' > mysql.sh
 RUN chmod +x mysql.sh
