--- a/apps/centos-base/Dockerfile
+++ b/apps/centos-base/Dockerfile
@@ -22,15 +22,16 @@ RUN yum install -y git
 #zsh
 RUN echo '================install zsh================'
 RUN wget http://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | sh
+
+
 #mysql
-RUN echo '================install mysql================'
-RUN yum install -y mysql-server
-RUN service mysqld start > mysql.log 
-RUN service mysqld restart > mysql2.log
-RUN sleep 30s
-RUN cat mysql.log | grep new-password | sed 's/new-password/Sample09X#/' > mysql.sh
-RUN chmod +x mysql.sh
-RUN sh mysql.sh
+# RUN echo '================install mysql================'
+# RUN yum install -y mysql-server
+# RUN service mysqld start > mysql.log 
+# RUN sleep 30s
+# RUN cat mysql.log | grep new-password | sed 's/new-password/Sample09X#/' > mysql.sh
+# RUN chmod +x mysql.sh
+# RUN sh mysql.sh
 
 
 #jdk
